# qia-challenge-2025

./: .gitignore  LICENSE.md  README.md  conftest.py  pyproject.toml  pytest.ini
caligo/: README.md  cleanup_hdf5_locks.sh  main_explor.py  pyproject.toml  reproduce_qber.py  test_postprocess.py  test_run.md  test_vis_tables.py
caligo/_native/: Cargo.toml  pyproject.toml
caligo/_native/scripts/: generate_test_vectors.py
caligo/_native/src/: error.rs  lib.rs  types.rs
caligo/_native/tests/: layout_checks.rs  test_decoder.rs  test_encoder.rs
caligo/caligo/: __init__.py  cli.py
caligo/caligo/amplification/: __init__.py  entropy.py  formatter.py  key_length.py  toeplitz.py
caligo/caligo/configs/: ldpc_degree_distributions.yaml
caligo/caligo/connection/: __init__.py  envelope.py  exceptions.py  ordered_socket.py
caligo/caligo/exploration/: __init__.py  active.py  active_executor.py  epr_batcher.py  gpu_surrogate.py  harness.py  lhs_executor.py  persistence.py  sampler.py  shared_memory.py  surrogate.py  surrogate_trainer.py  types.py
caligo/caligo/protocol/: __init__.py  alice.py  base.py  bob.py  orchestrator.py  protocol_state.py
caligo/caligo/quantum/: __init__.py  basis.py  batching.py  epr.py  factory.py  measurement.py  parallel.py  programs.py  workers.py
caligo/caligo/reconciliation/: __init__.py  blind_manager.py  block_reconciler.py  compiled_matrix.py  constants.py  factory.py  hash_verifier.py  ldpc_decoder.py  ldpc_encoder.py  leakage_tracker.py  matrix_manager.py  orchestrator.py  rate_selector.py  verification.py
caligo/caligo/scripts/: __init__.py  generate_ace_mother_code.py  generate_hybrid_patterns.py  generate_ldpc_matrices.py  generate_puncture_patterns.py  numba_kernels.py  peg_generator.py
caligo/caligo/security/: __init__.py  bounds.py  feasibility.py  finite_key.py
caligo/caligo/sifting/: __init__.py  commitment.py  detection_validator.py  qber.py  sifter.py
caligo/caligo/simulation/: __init__.py  constants.py  network_builder.py  noise_models.py  physical_model.py  timing.py  verifier.py
caligo/caligo/types/: __init__.py  exceptions.py  keys.py  measurements.py  phase_contracts.py
caligo/caligo/utils/: __init__.py  bitarray_utils.py  logging.py  math.py
caligo/caligo/vis_tables/: __init__.py  metrics.py  tables.py  visualizations.py
caligo/configs/: nsm_depolarise_example.yaml  nsm_erven_experimental.yaml  nsm_heralded_example.yaml  nsm_parameter_sweep.yaml  parallel.yaml
caligo/explor_configs/: dry_run_test.yaml  dry_run_with_viz.yaml  hpc_genoa_config.yaml  qia_challenge_config.yaml
caligo/exploration_results/qia_challenge_2025_20251222_024031/: exploration_data.h5
caligo/exploration_results/qia_challenge_2025_20251222_024343/: exploration_data.h5
caligo/exploration_results/qia_challenge_2025_20251222_030420/: exploration_data.h5
caligo/exploration_results/qia_challenge_2025_20251222_030543/: exploration_data.h5
caligo/scripts/: setup_hpc_env.sh  slurm_caligo.sh
caligo/tests/: conftest.py  test_phase_boundary_reconciliation_to_amplification.py  test_phase_boundary_sifting_to_reconciliation.py  test_phase_boundary_simulation_to_reconciliation.py  test_reconciliation_contracts.py
caligo/tests/e2e/: test_nsm_boundaries.py  test_parallel_simulation.py  test_phase_e_protocol.py  test_recon_complexity.py  test_stress_conditions.py  test_system_stress.py
caligo/tests/exploration/: __init__.py  conftest.py  test_active.py  test_persistence.py  test_pipeline_integration.py  test_sampler.py  test_stress.py  test_surrogate.py  test_thread_safety.py  test_types.py
caligo/tests/integration/: test_nsm_parameter_enforcement.py  test_parallel_protocol.py  test_protocol_wiring.py
caligo/tests/performance/: __init__.py  test_ldpc_decode_benchmark.py  test_parallel_speedup.py
caligo/tests/reconciliation/: __init__.py  test_blind_manager.py  test_bp_decoder.py  test_compiled_matrix.py  test_contracts.py  test_factory.py  test_factory_integration.py  test_hash_verifier.py  test_integration.py  test_leakage_tracker.py  test_matrix_manager_contracts.py  test_numba_kernels.py  test_orchestrator_multiblock.py  test_puncture_patterns.py  test_rate_selector.py
caligo/tests/security/: test_output_quality.py  test_parallel_iid.py
caligo/tests/test_amplification/: __init__.py  test_entropy.py  test_formatter.py  test_formatter_phase_contracts_integration.py  test_key_length.py  test_toeplitz.py
caligo/tests/test_quantum/: __init__.py  test_basis.py  test_basis_additional.py  test_batching.py  test_epr.py  test_epr_generator_generator_mode.py  test_factory.py  test_measurement.py  test_measurement_generator_fallback.py  test_parallel.py
caligo/tests/test_scripts/: test_generate_ldpc_matrices_args.py  test_hybrid_patterns.py  test_peg_degree_distribution.py  test_peg_numba_capacity_growth.py
caligo/tests/test_security/: __init__.py  conftest.py  (+3 more)
deprecated/: conftest.py  pyproject.toml
(+470 files in other folders)
