[project]
name = "caligo"
version = "0.1.0"
description = "1-out-of-2 OT Protocol Implementation with Native SquidASM Integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alessandro Da Ros"}
]
keywords = ["quantum", "cryptography", "oblivious-transfer", "squidasm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.21",
    "numba>=0.63.1",
    "bitarray>=2.6",
    "scipy>=1.7",
    "joblib>=1.5.3",
    "scikit-learn>=1.7.2",
    "dill>=0.4.0",
    "h5py>=3.15.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
simulation = [
    "squidasm>=0.12",
    "netqasm>=0.15,<2",
    "netsquid>=1.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["caligo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
markers = [
    "integration: multi-package integration tests (small integration; no E2E simulation)",
    "e2e: end-to-end tests (may run full simulation)",
    "slow: tests that are slow and can be skipped in fast CI",
    "performance: lightweight performance/overhead checks",
    "security: statistical sanity checks for security assumptions",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "D"]
